added removeFirst and removeLast